fix: remove gap in stacked view

--- a/src/frappe/userchrome.css
+++ b/src/frappe/userchrome.css
@@ -57,7 +57,6 @@ html, body {
 
 /* General panel style */
 .resizableLayoutItem > div {
-  min-width: 200px !important;
   background-color: #303446 !important;
 }
 
