--- a/src/latte/userchrome.css
+++ b/src/latte/userchrome.css
@@ -57,7 +57,6 @@ html, body {
 
 /* General panel style */
 .resizableLayoutItem > div {
-  min-width: 200px !important;
   background-color: #EFF1F5 !important;
 }
 
