--- a/src/mocha/userchrome.css
+++ b/src/mocha/userchrome.css
@@ -57,7 +57,6 @@ html, body {
 
 /* General panel style */
 .resizableLayoutItem > div {
-  min-width: 200px !important;
   background-color: #1E1E2E !important;
 }
 
